--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                         <a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
                                     </li>
                                 </ul>
-
+							</div>
 						</div>
                     </div>
                 </div>
@@ -717,22 +717,24 @@
                             <h2>Vino's Pizza</h2>
                             <hr class="colored">
                             <p>We did a full makeover of Vino's Pizza online web presence.  Vino's Pizza is located in Lafayette Hill, PA just outside of Philadelphia and make some of the best pizzas you will ever have.  The problem was, the online customer was having a hard time finding out about that.  We went on a journey to fix this.
-                            <br><br>
-                            We started off by doing a full redesign of their "website" from the ground up.  We concentrated on the fact that most people search for restaurant menus and directions from their cell phone, which is why our first priority was the optimal functionality on mobile devices.
-                            <br>
-							<div class="col-lg-12">
-                            <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive img-centered" alt="">
-							</div>
-							<br>
-                            Next, we optimized their listings in websites like Yelp, Google+, Facebook, Menupages... so that the customer sees the most up to date information as well as some gorgeous pictures of thier pies.
-                            <br><br>
-                            Finally, we took their brand to social media and began activly engaging with the customer.  Be it proving information about events, specials, or just responding to reviews and questions. This allowed for greatly improved SEO on the major search engines.
-                            <br><br> 
-                            Vino's Pizza now has the online presence equilivent of the big chains, but with more agility and at a fraction of the cost. Also, make sure if you are around Philadelphia, ask Fabio and Pasquale to make you their famous "Grandmas Pizza".  We promise you will leave happy...
+								<br><br>
+								We started off by doing a full redesign of their "website" from the ground up.  We concentrated on the fact that most people search for restaurant menus and directions from their cell phone, which is why our first priority was the optimal functionality on mobile devices.
+							</p>	
+								<br>
+								<div class="col-lg-12">
+								<img src="assets/img/portfolio/mobile-screens.png" class="img-responsive img-centered" alt="">
+								</div>
+								<br>
+							<p>								
+								Next, we optimized their listings in websites like Yelp, Google+, Facebook, Menupages... so that the customer sees the most up to date information as well as some gorgeous pictures of thier pies.
+								<br><br>
+								Finally, we took their brand to social media and began activly engaging with the customer.  Be it proving information about events, specials, or just responding to reviews and questions. This allowed for greatly improved SEO on the major search engines.
+								<br><br>
+								Vino's Pizza now has the online presence equilivent of the big chains, but with more agility and at a fraction of the cost. Also, make sure if you are around Philadelphia, ask Fabio and Pasquale to make you their famous "Grandmas Pizza".  We promise you will leave happy...
                             </p>
-                        </div>
+						</div>
                         <div class="col-lg-12">
-                            <img src="assets/img/portfolio/VinosMacbook.png" class="img-responsive img-centered" alt="" style="max-height:400px; margin-right:auto; margin-left:auto;>
+                            <img src="assets/img/portfolio/VinosMacbook.png" class="img-responsive img-centered" alt="" style="max-height:400px; margin-right:auto; margin-left:auto;">
                         </div>
                         <div class="col-lg-8 col-lg-offset-2">
                             <ul class="list-inline item-details">
@@ -744,7 +746,9 @@
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+							
                         </div>
+						
                     </div>
                 </div>
             </div>
