--- a/index.html
+++ b/index.html
@@ -446,7 +446,8 @@
                 </div>
             </div>
         </div>
-        <div class="item" style="background-image: url('assets/img/portfolio/bg-4.jpg')">
+<!-- 
+ <div class="item" style="background-image: url('assets/img/portfolio/bg-4.jpg')">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-4 col-md-push-8">
@@ -464,6 +465,7 @@
                 </div>
             </div>
         </div>
+-->		
     </section>
 
 <!--
@@ -846,7 +848,7 @@
         </div>
     </div>
 
-    <!-- Example Modal 4 -->
+    <!-- Example Modal 4
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/portfolio/bg-4.jpg')">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -884,7 +886,7 @@
         </div>
     </div>
 
-	
+-->	
     <!-- Style Switcher - FOR DEMO PURPOSES ONLY -->
  <!--   <div id="style-switcher" class="close-style-switcher">
  
