--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	.owl-wrapper{margin-left:auto; margin-right:auto;}
 	aside.cta-quote {padding:100px;}
 	.crazy{margin-left:-8px;}		
-    .aboutustext {font-size:23px;}   
+    .aboutustext {font-size:17px;}   
 	aside.cta-quote span.quote {font-size:30px;}
     .test {font-size:40px;}   
     .horse{margin-left:auto; margin-right:auto; width:90%;}
@@ -177,7 +177,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 col-md-offset-0">
-							<span class="aboutustext" style="color:black;">We reintroduce your company to the internet. We say (re) because even if you've never explored e-marketing before if you make a good product the internet knows about you. That's a fact. People talk and the web is where they're talking. What we do is get you in touch with these people through a combination strategy of web design, social media management, and SEO expertise. Our process is comprehensive and efficient.</span>
+							<p><span class="aboutustext" style="color:black;">We reintroduce your company to the internet. We say (re) because even if you've never explored e-marketing before if you make a good product the internet knows about you. That's a fact. People talk and the web is where they're talking. What we do is get you in touch with these people through a combination strategy of web design, social media management, and SEO expertise. Our process is comprehensive and efficient.</span></p>
                                <br><br> <a href="#process" class="btn btn-outline-dark crazy">Learn More About<br>Our Process</a>
 						</div>
 					</div>	
