--- a/FlashBang/FlashBang/boomstick.html
+++ b/FlashBang/FlashBang/boomstick.html
@@ -20,6 +20,8 @@
     <!-- Font Awesome -->
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	
+	<link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+	
 
 
 <!--[if IE]><style type="text/css">.pie {behavior:url(PIE.htc);}</style><![endif]-->
@@ -143,11 +145,12 @@ a:active {
             	<br><img src="img/Portfolio-pic6.jpg" alt="">
             </div><br>
         	<div class="col-md-7 wow fadeInLeft delay-05s">
-				<h2>Boomstick </h2><br>
-                <p class="about">Our mission is to provide top quality live entertainment while offering you a range of options to fit your specific requests and budget. We are a one-stop shop for all your live entertainment                     needs.  From our sensational solo acoustic shows to our hot party bands, we have the perfect musical act for every situation!<br><br>
-                We work with an extensive network of professional musicians trained to perform a variety of musical styles, from classical to rock and jazz to pop.  <br><br>
+				<h2 style="font-size:50px; font-family: 'Indie Flower', cursive;">Boomstick </h2><br>
+                <p class="about"> 5-piece power party band sure to get the audience up and dancing!  Performs top radio hits and favorite classics in an interesting and musical way.  The unique instrumentation and male vocal harmonies will leave the audience wanting more time on the dance floor!  Band takes requests upon booking.
+				<br><br><b>Features:</b> electric guitar, acoustic guitar, saxophone/flute, electric bass, full drum kit, and all male vocals.
+				<br><br>
 
-                Check out our bands page for more information and audio samples!
+
                 </p>
             </div>
         
@@ -161,7 +164,7 @@ a:active {
 <section id="portfolio"><!--main-section-start-->
 	<div class="container"><br>
         	<div class="col-md-12 wow fadeInLeft delay-05s">
-				<h2 style="font-size:45px; color:white">Portfolio </h2><br>
+				<br><h2 style="font-size:50px; color:white; font-family: 'Indie Flower', cursive;">Portfolio </h2><br>
 
             </div>
 		<div class="row">
@@ -188,12 +191,12 @@ a:active {
 </section>
 
 
-<section class="" id="contact"><!--main-section client-part-start-->
-	<div class="container"><br>
-	<a class="link animated fadeInUp delay-1s" id="aboutbutton smooth" href="#" style="width:100%; margin-left:auto;margin-right:auto;text-align:center">Contact Us!</a>	
+<!--main-section client-part-start-->
+	<div class="container" style="width:100%;height:100%;;margin:0px;padding:0px;background-color:#7cc576"><br>
+	<a class="link animated fadeInUp delay-1s" id="aboutbutton smooth" href="#" style="width:100%; margin-left:auto;margin-right:auto;text-align:center; font-size:35px;">Contact Us!</a>	
 	<br>
 	</div>
-</section>	
+	
 
 
 <footer class="footer">
