--- a/FlashBang/FlashBang/boomstick.html
+++ b/FlashBang/FlashBang/boomstick.html
@@ -114,8 +114,20 @@ a:active {
 }
 
 .desc{line-height:20px;}
- #portfolio{background-color:#0f0f0f;padding-bottom:60px;}
+ #portfolio{background-color:#0f0f0f;padding-bottom:60px;
+ -webkit-box-shadow: -1px -5px 26px 1px rgba(0,0,0,0.77);
+-moz-box-shadow: -1px -5px 26px 1px rgba(0,0,0,0.77);
+box-shadow: -1px -5px 26px 1px rgba(0,0,0,0.77);
+ 
+ }
  .bandinfo{padding-bottom:40px;}
+ 
+ .main-nav-outer{-webkit-box-shadow: 0px 3px 26px 1px rgba(0,0,0,0.77);
+-moz-box-shadow: 0px 3px 26px 1px rgba(0,0,0,0.77);
+box-shadow: 0px 3px 26px 1px rgba(0,0,0,0.77);
+}
+ 
+ 
     </style>
     
     
