--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
 
 
-    <section class="testimonials">
+    <section class="testimonials" id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
