--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- Retina.js - Load first for faster HQ mobile images. -->
-    <script src="assets/js/plugins/retina/retina.min.js"></script>
+<!--    <script src="assets/js/plugins/retina/retina.min.js"></script> -->
 
     <!-- Font Awesome -->
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
