--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- Retina.js - Load first for faster HQ mobile images. -->
-<!--    <script src="assets/js/plugins/retina/retina.min.js"></script> -->
+<!--    <script src="assets/js/plugins/retina/retina.min.js"></script>-->
 
     <!-- Font Awesome -->
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -380,7 +380,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 col-md-pull-4 hidden-xs port2">
-                        <img src="assets/img/portfolio/VinosMain.png" class="img-responsive portfolio-image port1" alt="">
+                        <img src="assets/img/portfolio/VinosMain.png" class="img-responsive portfolio-image port1" alt="" style="width:90%">
                     </div>
                 </div>
             </div>
@@ -398,7 +398,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="assets/img/portfolio/phillyrepmain.png" class="img-responsive portfolio-image" alt="">
+                        <img src="assets/img/portfolio/phillyrepmain.png" class="img-responsive portfolio-image" alt="" style="width:90%">
                     </div>
                 </div>
             </div>
