--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
     .horse{margin-left:auto; margin-right:auto; width:90%;}
     .seo{margin-top:-4px;}
     header .brand-name{font-size:40px;}
+	.crazybutton{
+		transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+		transition-delay: 0.2s;
+		box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+		}			
 	</style>
 
 </head>
@@ -142,7 +147,7 @@
 							</p>
                             <br>
 							<br>
-							<a href="#team" class="btn btn-outline-dark crazy">Learn More<br>About Us</a>
+							<a href="#team" class="btn btn-outline-dark crazy crazybutton">Learn More<br>About Us</a>
 						</div>
 					</div>	
 				</div>
@@ -181,7 +186,7 @@
 							</p>
 							<br>
 							<br>
-							<a href="#process" class="btn btn-outline-dark crazy">Learn More About<br>Our Process</a>
+							<a href="#process" class="btn btn-outline-dark crazy crazybutton">Learn More About<br>Our Process</a>
 						</div>
 					</div>	
 				</div>
@@ -296,7 +301,7 @@
                             </ul>
                         </div>
                     </div>
-                    <br><br><a href="WebsiteDesign.html" class="btn btn-outline-dark crazy horse">Learn More</a> <br><br><br>
+                    <br><br><a href="WebsiteDesign.html" class="btn btn-outline-dark crazy horse crazybutton">Learn More</a> <br><br><br>
                 </div>
                 <div class="col-md-4">
                     <div class="media">
@@ -313,7 +318,7 @@
                             </ul>
                         </div>
                     </div>
-                    <br><br><a href="SocialMedia.html" class="btn btn-outline-dark crazy horse">Learn More</a> <br><br><br>                    
+                    <br><br><a href="SocialMedia.html" class="btn btn-outline-dark crazy horse crazybutton">Learn More</a> <br><br><br>                    
                 </div>
                 <div class="col-md-4">
                     <div class="media">
@@ -330,7 +335,7 @@
                             </ul>
                         </div>
                     </div>
-                    <br><br><a href="#process" class="btn btn-outline-dark crazy horse">Learn More</a> <br>                    
+                    <br><br><a href="#process" class="btn btn-outline-dark crazy horse crazybutton">Learn More</a> <br>                    
                 </div>
             </div>
         </div>
@@ -411,7 +416,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
-                <a href="#" class="btn btn-outline-dark" style="width:90%">Contact Us!</a>
+                <a href="#" class="btn btn-outline-dark crazybutton" style="width:90%">Contact Us!</a>
                 </div>
             </div>    
         </div>      
