--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -221,7 +221,8 @@
 		<!-- Process Specific Section Begin -->
 		<section class="bg-gray" id="RetinaReady">
 			<div class="container text-center">
-				<div class="row" itemscope itemtype="http://data-vocabulary.org/Product">
+				<div class="row" itemscope itemtype="http://data-vocabulary.org/CreativeWork">
+				 <meta itemprop="inLanguage" content="en-US"/>
 					<div class="col-lg-12">
 					<div>
 						<i class="fa fa-eye fa-5x" itemprop="image"></i> <!-- Icon from Font-Awesome -->
@@ -233,7 +234,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-12 col-md-offset-0">
-								<span class="aboutustext" style="color:black;" itemprop="description">
+								<span class="aboutustext" style="color:black;" itemprop="text">
 								<!-- Section Decription -->
 								We feel that one of the truest test of quality lay in the little things. Small Details, that many overlook entirely, but when done right and brought to light with clarity and confidence can make a world of difference.<br><br>Retina Ready display is one of these details. Basically the standard screen size and resolution of most mobile devices make it difficult for the human eye to distinguish individual pixels at an optimal viewing distancy, which results in poor quality images and less then optimal user experience. At Good Candy Inc. that's simply not what we're about So to fix this, all of our websites are designed as Retina Ready Pages.
 								<!-- Section Decription End -->
