--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -220,8 +220,8 @@
 		
 		<!-- Process Specific Section Begin -->
 		<section class="bg-gray" id="RetinaReady">
-			<div class="container text-center">
-				<div class="row" itemscope itemtype="http://data-vocabulary.org/CreativeWork">
+			<div class="container text-center" vocab="http://schema.org/">
+				<div class="row" itemscope itemtype="http://schema.org/CreativeWork">
 				 <meta itemprop="inLanguage" content="en-US"/>
 					<div class="col-lg-12">
 					<div>
