--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -268,20 +268,21 @@
 		
 	<!-- Process Specific Section Begin -->
 		<section class="bg-gray" id="Speed">
-			<div class="container text-center">
-				<div class="row">
+			<div class="container text-center" vocab="http://schema.org/>
+				<div class="row" itemscope itemtype="http://schema.org/CreativeWork">
+				<meta itemprop="inLanguage" content="en-US"/>
 					<div class="col-lg-12">
 					<div>
 						<i class="fa fa-rocket fa-5x"></i> <!-- Icon from Font-Awesome -->
 					</div>
-						<h2 style="color:black;">Speed Rules</h2> <!-- Title Header -->
+						<h2 style="color:black;" itemprop="name">Speed Rules</h2> <!-- Title Header -->
 						<p></p>
 						<hr class="colored">
 					</div>
 					<div class="container">
 						<div class="row">
 							<div class="col-md-12 col-md-offset-0">
-								<span class="aboutustext" style="color:black;">
+								<span class="aboutustext" style="color:black;" itemprop="text">
 								<!-- Section Decription -->
 								It's an old saying that applies to a myriad of media based scenarios but perhaps none better than website design. Simply put, on the web speed kills. It affects key factors such as conversion rates, bounce rates, customer loyalty, and helps determine where your site belongs in the almighty search engine rankings. The sweet and simple of it is this; faster websites create happier users and longer stay times, Google aims to provide a positive experience for its users, so it likes this and therefore stack those sites higher on various keyword searches. It's a symbiotic relationship that's born with speed, is maintained by quality, and ends in exposure. The controlled positive kind. The kind that drives business. 
 								<br><br>
@@ -291,9 +292,9 @@
 								<br><br><br>
 								<!-- Our Favorite Links -->
 								<h4>Check out some of our favorite resources that describe Website Speed Importance</h4>
-								<div class="resources"><a href="https://www.mattcutts.com/blog/site-speed/" class="btn btn-outline-dark crazybutton buttonformat" target="_blank" ><i class="fa fa-external-link"></i> Google incorporating site speed in search rankings<br> -Matt Cutts (Head of Google Webspam)</a></div>
-								<div class="resources"><a href="http://tools.pingdom.com/fpt/" class="btn btn-outline-dark crazybutton buttonformat" target="_blank"><i class="fa fa-external-link"></i> Test Your Current Website Speed<br> -Pingdom Tools</a></div>
-								<div class="resources"><a href="https://kinsta.com/learn/page-speed/" class="btn btn-outline-dark crazybutton buttonformat" target="_blank"><i class="fa fa-external-link"></i> A Beginner's Guide to Website Speed Optimization<br> -Mark Gavalda (DevOps Guy and Head Honcho at Kinsta)</a></div>
+								<div class="resources"><a itemprop="sameAs" href="https://www.mattcutts.com/blog/site-speed/" class="btn btn-outline-dark crazybutton buttonformat" target="_blank" ><i class="fa fa-external-link"></i> Google incorporating site speed in search rankings<br> -Matt Cutts (Head of Google Webspam)</a></div>
+								<div class="resources"><a itemprop="sameAs" href="http://tools.pingdom.com/fpt/" class="btn btn-outline-dark crazybutton buttonformat" target="_blank"><i class="fa fa-external-link"></i> Test Your Current Website Speed<br> -Pingdom Tools</a></div>
+								<div class="resources"><a itemprop="sameAs" href="https://kinsta.com/learn/page-speed/" class="btn btn-outline-dark crazybutton buttonformat" target="_blank"><i class="fa fa-external-link"></i> A Beginner's Guide to Website Speed Optimization<br> -Mark Gavalda (DevOps Guy and Head Honcho at Kinsta)</a></div>
 						   </div>
 						</div>	
 					</div>
