--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Good Candy Inc.</title>
+    <title>Website Design - Good Candy Inc.</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -129,8 +129,8 @@
 					 <li class="dropdown">
 					  <a itemprop="url" href="index.html/#process" class="dropdown-toggle" data-toggle="dropdown"><span itemprop="name">Our Process </span<span class="caret"></span></a>
 					  <ul class="dropdown-menu" role="menu" style="background-color:#222; color:white;">
-						<li class="active" style="padding:10px;"><a itemprop="url" href="#">Website Design</span></a></li>
-						<li style="padding:10px;"><a itemprop="url" href="socialmedia.html">Social Media Management</span></a></li>
+						<li class="active" style="padding:10px;"><a itemprop="url" href="#"><span itemprop="name">Website Design</span></a></li>
+						<li style="padding:10px;"><a itemprop="url" href="socialmedia.html"><span itemprop="name">Social Media Management</span></a></li>
 						<li style="padding:10px;"><a itemprop="url" href="seo.html"><span itemprop="name">SEO Optimization</span></a></li>
 					  </ul>
 					</li>
