--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -5,8 +5,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+	<meta name="keywords" content="Website, Design, Good Design Principles, mobile, speed, modern, custom, value, fun, retina, retina ready" />
+    <meta name="description" content="Quality website design is one of the most important aspects of the modern web and customer retention. Check out our thoughts on what it takes to create truly great website!">
+    <meta name="author" content="Good Candy Inc.">
 
     <title>Website Design - Good Candy Inc.</title>
 
