--- a/FlashBang/FlashBang/boomsticktrio.html
+++ b/FlashBang/FlashBang/boomsticktrio.html
@@ -201,7 +201,7 @@
 <footer class="footer">
     <div class="container">
         <div class="footer-logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
-        <span class="copyright">Copyright © 2014 Flashbang Entertainment By <a href="#">The Good Candy</a>.</span>
+        <span class="copyright">Copyright Â© 2014 Flashbang Entertainment By <a href="#">The Good Candy</a>.</span>
     </div>
 </footer>
 <!--Footer End-->
