--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -205,7 +205,7 @@ a:active {
 			Pricing and availability may vary.  Contact us for more information.
 </h6>
       <div class="portfolioFilter">  
-        <ul class="Portfolio-nav wow fadeIn delay-02s">
+        <ul class="Portfolio-nav wow">
         	<li><a href="#" data-filter="*" class="current" >All</a></li>
             <li><a href="#" data-filter=".soloandduo" >Solo & Duo</a></li>
              <li><a href="#" data-filter=".triobands" >Trio Bands</a></li>
@@ -215,14 +215,14 @@ a:active {
        </div> 
         
 	</div>
-    <div class="portfolioContainer wow fadeInUp delay-04s">
+    <div class="portfolioContainer wow">
             	<div class=" Portfolio-box partybands">
                 	<a href="#"><img src="img/Portfolio-pic1.jpg" alt=""></a>	
                 	<h3>Hollow Point</h3>
                     <p class="desc">Electric Guitar, Sax, Flute, Electric Bass, Drums, Keyboards, Male & Female Vocals</p>
                 </div>
                 <div class="Portfolio-box triobands">
-                	<a href="#"><img src="img/Portfolio-pic2.jpg" alt=""></a>	
+                	<a href="boomsticktrio.html"><img src="img/Portfolio-pic2.jpg" alt=""></a>	
                 	<h3>The Boomstick Trio</h3>
                     <p class="desc">Acoustic/Classical Guitar, Upright Bass/Violin/Acoustic Bass, Sax/Flute/Cajon, Male Vocals</p>
                 </div>
@@ -258,13 +258,13 @@ a:active {
 
 <section class="main-section client-part" id="reviews"><!--main-section client-part-start-->
 	<div class="container">
-		<b class="quote-right wow fadeInDown delay-03"><i class="fa-quote-right"></i></b>
+		<b class="quote-right wow"><i class="fa-quote-right"></i></b>
     	<div class="row">
         	<div class="col-lg-12">
-            	<p class="client-part-haead wow fadeInDown delay-05">We needed a specific kind of sound to fit our wedding. Flashbang found it.<br>	 These guys bring the fun.</p>
+            	<p class="client-part-haead wow">We needed a specific kind of sound to fit our wedding. Flashbang found it.<br>	 These guys bring the fun.</p>
             </div>
         </div>
-    	<ul class="client wow fadeIn delay-05s">
+    	<ul class="client wow">
         	<li><a href="#">
             	<h3>Charles & Michelle Fitzpatrick</h3>
                 <span>Married 2014</span>
