--- a/FlashBang/FlashBang/boomsticktrio.html
+++ b/FlashBang/FlashBang/boomsticktrio.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Good Candy Inc." />
 
 
-<title>Boomstick - [Band] - Flashbang Entertainment</title>
+<title>Boomstick Trio - [Band] - Flashbang Entertainment</title>
 <link rel="icon" href="favicon.png" type="image/png">
 <link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
 
@@ -142,7 +142,7 @@
             	<br><img itemprop="image" src="img/Portfolio-pic6.jpg" alt="">
             </div><br>
         	<div class="col-md-7 wow">
-				<h2 class="title" itemprop="name">Boomstick </h2><br>
+				<h2 class="title" itemprop="name">Boomstick Trio</h2><br>
                 <p class="about"><span itemprop="description"> 5-piece power party band sure to get the audience up and dancing!  Performs top radio hits and favorite classics in an interesting and musical way.  The unique instrumentation and male vocal harmonies will leave the audience wanting more time on the dance floor!  Band takes requests upon booking.
 				<br><br><b>Features:</b> electric guitar, acoustic guitar, saxophone/flute, electric bass, full drum kit, and all male vocals.</span>
 				<br><br>
