--- a/FlashBang/FlashBang/hollowpoint.html
+++ b/FlashBang/FlashBang/hollowpoint.html
@@ -6,12 +6,12 @@
 
 	<!-- Meta Tags *** FILL IN WHEN CREATING NEW PAGE ***-->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="boomstick, music, band, party band, modern, custom, value, electric guitar, acoustic guitar, saxophone, flute, electric bass, drums, male vocals" />
-	<meta name="description" content="Boomstick Trio is one of the best bookable bands in the Philadelphia Area. They will play an array of different music styles to fit your needs." />
+	<meta name="keywords" content="Hollow, Point, Hollow Point,  music, band, party band, modern, custom, value, electric guitar, acoustic guitar, saxophone, flute, electric bass, drums, male vocals" />
+	<meta name="description" content="Hollow Point is one of the best bookable bands in the Philadelphia Area. They will play an array of different music styles to fit your needs." />
 	<meta name="author" content="Good Candy Inc." />
 
 
-<title>Boomstick Trio - [Band] - Flashbang Entertainment</title>
+<title>Hollow Point - [Band] - Flashbang Entertainment</title>
 <link rel="icon" href="favicon.png" type="image/png">
 <link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
 
@@ -139,12 +139,12 @@
     	<h6></h6>
         <div class="row">
 		    <div class="col-md-5  text-right wow">
-            	<br><img itemprop="image" src="img/Portfolio-pic2.jpg" alt="">
+            	<br><img itemprop="image" src="img/Portfolio-pic1.jpg" alt="">
             </div><br>
         	<div class="col-md-7 wow">
-				<h2 class="title" itemprop="name">Boomstick Trio</h2><br>
-                <p class="about"><span itemprop="description"> A unique acoustic trio performs songs from a variety of genres, from Billboard Top 40 to classic jazz standards.  Also performs classical pieces upon request!  A popular choice for adding that extra special something to your wedding ceremony and cocktail hour!  Band takes requests upon booking.
-				<br><br><b>Features:</b> acoustic/classical guitar, upright bass/violin/acoustic bass, saxophone/flute/cajon, and male vocals.</span>
+				<h2 class="title" itemprop="name">Hollow Point</h2><br>
+                <p class="about"><span itemprop="description"> 6-piece power party band guaranteed to get everyone in the room moving!  Performs top radio hits and funk arrangements in an interesting and musical way.  The unique instrumentation and male/female vocal harmonies will crowd the dace floor until the party ends!  Band takes requests upon booking.
+				<br><br><b>Features:</b> electric guitar, saxophone/flute, electric bass, full drum kit, keyboards, male vocals, and female lead vocals.</span>
 				<br><br>
                 </p>
             </div>
