--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -217,7 +217,7 @@ a:active {
 	</div>
     <div class="portfolioContainer wow">
             	<div class=" Portfolio-box partybands">
-                	<a href="#"><img src="img/Portfolio-pic1.jpg" alt=""></a>	
+                	<a href="hollowpoint.html"><img src="img/Portfolio-pic1.jpg" alt=""></a>	
                 	<h3>Hollow Point</h3>
                     <p class="desc">Electric Guitar, Sax, Flute, Electric Bass, Drums, Keyboards, Male & Female Vocals</p>
                 </div>
