--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -227,7 +227,7 @@ a:active {
                     <p class="desc">Acoustic/Classical Guitar, Upright Bass/Violin/Acoustic Bass, Sax/Flute/Cajon, Male Vocals</p>
                 </div>
                 <div class=" Portfolio-box soloandduo">
-                	<a href="#"><img src="img/Portfolio-pic3.jpg" alt=""></a>	
+                	<a href="timtreweek.html"><img src="img/Portfolio-pic3.jpg" alt=""></a>	
                 	<h3>Tim Treweek Acoustic Entertainment</h3>
                     <p class="desc">Acoustic Guitar & Male Vocals</p>
                 </div>
