--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -238,7 +238,7 @@ a:active {
                 </div>
 -->				
                 <div class=" Portfolio-box soloandduo">
-                	<a href="#"><img src="img/Portfolio-pic5.jpg" alt=""></a>	
+                	<a href="timnrob.html"><img src="img/Portfolio-pic5.jpg" alt=""></a>	
                 	<h3>Tim N' Rob</h3>
                     <p>Acoustic Guitar, Sax, Flute, Cajon, Male Vocals</p>
                 </div>
