--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -248,7 +248,7 @@ a:active {
                     <p class="desc">Electric Guitar, Acoustic Guitar, Sax, Flute, Electic Bass, Full Drum Kit, Male Vocals</p>
                 </div>
                 <div class=" Portfolio-box bluesandrock">
-                	<a href="#"><img src="img/Portfolio-pic8.jpg" alt=""></a>	
+                	<a href="skinnymamie.html"><img src="img/Portfolio-pic8.jpg" alt=""></a>	
                 	<h3>Skinny Mamie</h3>
                     <p class="desc">Electic Guitar, Sax, Flute, Hammond, Organ, Keyboards, Electric Bass, Full Drum Kit.</p>
                 </div>				
