--- a/FlashBang/FlashBang/boomstick.html
+++ b/FlashBang/FlashBang/boomstick.html
@@ -170,23 +170,22 @@
 				<div class="icon">
 					<img src="img/Doodle Icons-08.png" alt="" class="iconImg">
 				</div>
+				<br><br>
+				<h2 style="color:white">Coming Soon!</h2>
 				<br>
-				<iframe itemprop="track" itemscope itemtype="http://schema.org/MusicRecording" width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/155829883&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-				<br>
-				<iframe itemprop="track" itemscope itemtype="http://schema.org/MusicRecording" width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/152589690&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+<!--				 <iframe itemprop="track" itemscope itemtype="http://schema.org/MusicRecording" width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/152589690&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+-->
 			</div>	
 			<br><br>			
 			<div class="col-md-6 wow">
 				<div class="icon">
 					<img src="img/Doodle Icons-50.png" alt="" class="iconImg">
-				</div><br>
-				<div class="video" itemprop="video" itemscope itemtype="http://schema.org/VideoObject">
-					<iframe width="100%" height="315" src="http://www.youtube.com/embed/3PdILZ_1P74" frameborder="0" allowfullscreen ></iframe>
-				</div>
+				</div><br><br>
+				<h2 style="color:white">Coming Soon!</h2>
 			</div>			
 		</div>
     </div>
-    <br><br><br><br>
+    <br><br><br><br><br><br><br><br>
 </section>
 <!--Portfolio End-->
 
