--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -134,7 +134,7 @@ a:active {
 
 <header class="header" id="header test"><!--header-start-->
 	<div class="container" id="PageTop">
-    	<figure class="logo animated fadeInDown delay-07s">	
+    	<figure class="logo animated fadeInDown delay-07s"><div style="height:100%; width:100%"><img src="img/logo.png" style="width:100%" alt=""></div>	
         </figure>	
         <h1 class="animated fadeInDown delay-07s">Flashbang Entertainment</h1>
         <ul class="we-create animated fadeInUp delay-1s">
