--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -223,7 +223,7 @@
 			</aside> 
 		
 		<!-- Process Specific Section Begin -->
-		<section class="bg-gray" id="connect">
+		<section class="bg-gray" id="create">
 			<div class="container text-center" vocab="http://schema.org/">
 				<div class="row" itemscope itemtype="http://schema.org/CreativeWork">
 				 <meta itemprop="inLanguage" content="en-US"/>
@@ -276,7 +276,7 @@
 			</aside> 
 		
 		<!-- Process Specific Section Begin -->
-		<section class="bg-gray" id="connect">
+		<section class="bg-gray" id="develop">
 			<div class="container text-center" vocab="http://schema.org/">
 				<div class="row" itemscope itemtype="http://schema.org/CreativeWork">
 				 <meta itemprop="inLanguage" content="en-US"/>
@@ -330,7 +330,7 @@
 					<div>
 						<i class="fa fa-cubes fa-5x"></i> <!-- Icon from Font-Awesome -->
 					</div>
-						<h2 style="color:black;" itemprop="name">Build</h2> <!-- Title Header -->
+						<h2 style="color:black;" itemprop="name">build</h2> <!-- Title Header -->
 						<p></p>
 						<hr class="colored">
 					</div>
