--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -123,7 +123,8 @@ a:active {
         	<li><a href="#PageTop">Home</a></li>
             <li><a href="#service">Mission</a></li>
             <li><a href="#AboutUs">About Us</a></li>
-            <li class="small-logo"><a href="#header"><img src="img/small-logo.png" alt=""></a></li>
+            <li class="small-logo">
+            <a href="#header"><img src="img/small-logo.png" alt=""></a></li>
             <li><a href="#bands">Bands</a></li>
             <li><a href="#reviews">Reviews</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -154,7 +155,7 @@ a:active {
     	<h6>Why should you trust us with your entertainment?</h6>
         <div class="row">
         	<div class="col-md-6 wow fadeInLeft delay-05s">
-                <p class="about">Our mission is to provide top quality live entertainment while offering you a range of options to fit your specific requests and budget. We are a one-stop shop for all your live entertainment                     needs.  From our sensational solo acoustic shows to our hot party bands, we have the perfect musical act for every situation!<br><br>
+                <p class="about">Our mission is to provide top quality live entertainment while offering you a range of options to fit your specific requests and budget. We are a one-stop shop for all your live entertainment needs.  From our sensational solo acoustic shows to our hot party bands, we have the perfect musical act for every situation!<br><br>
                 We work with an extensive network of professional musicians trained to perform a variety of musical styles, from classical to rock and jazz to pop.  <br><br>
 
                 Check out our bands page for more information and audio samples!
