--- a/FlashBang/FlashBang/timtreweek.html
+++ b/FlashBang/FlashBang/timtreweek.html
@@ -88,7 +88,8 @@
 							<br><br><b>Features:</b> acoustic guitar and male vocals.</span>
 							<br><br><br><br><br><br><br>
 			                </p>
-			            </div>			        
+			            </div>
+			        
 			        </div>
 				</div>
 			</section>
@@ -119,8 +120,7 @@
 						<div class="col-md-6 wow">
 							<div class="icon">
 								<img src="img/Doodle Icons-50.png" alt="" class="iconImg">
-							</div>
-							<br>
+							</div><br>
 							<div class="video" itemprop="video" itemscope itemtype="http://schema.org/VideoObject">
 								<iframe width="100%" height="315" src="http://www.youtube.com/embed/3PdILZ_1P74" frameborder="0" allowfullscreen ></iframe>
 							</div>
