--- a/FlashBang/FlashBang/timnrob.html
+++ b/FlashBang/FlashBang/timnrob.html
@@ -122,7 +122,8 @@
 						</div>
 						<br><br>
 						
-						<meta itemprop="MusicAlbum" content ="Cover Songs">
+						<meta itemscope itemtype="http://schema.org/MusicAlbum">
+						<meta itemprop="name" content="Cover Songs">
 						
 						<!--Song 1 -->
 						<div id="jquery_jplayer_1" class="jp-jplayer" itemprop="track" itemscope itemtype="http://schema.org/MusicRecording">
