--- a/FlashBang/FlashBang/boomstick.html
+++ b/FlashBang/FlashBang/boomstick.html
@@ -72,7 +72,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="index.html#mission">Mission</a></li>
 					<li><a href="index.html#AboutUs">About Us</a></li>
-					<li class="small-logo"><a href="#service"><img src="img/small-logo.png" alt=""></a></li>
+					<li class="small-logo"><a href="index.html"><img src="img/small-logo.png" alt=""></a></li>
 					<li><a href="index.html#bands">Bands</a></li>
 					<li><a href="index.html#reviews">Reviews</a></li>
 					<li><a href="index.html#contact">Contact</a></li>
