--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -16,6 +16,7 @@
 <link href="css/font-awesome.css" rel="stylesheet" type="text/css">
 <link href="css/responsive.css" rel="stylesheet" type="text/css">
 <link href="css/animate.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="css/animations.css">
 
 
     <!-- Font Awesome -->
@@ -66,9 +67,9 @@
 
 <header class="header" id="header test"><!--header-start-->
 	<div class="container" id="PageTop">
-    	<figure class="logo animated fadeInDown delay-07s"><div style="height:100%; width:100%"><img src="img/logo.png" style="width:100%" alt=""></div>	
+    	<figure class="logo slideUp"><div style="height:100%; width:100%"><img src="img/logo.png" style="width:100%" alt=""></div>	
         </figure>	
-        <h1 class="animated fadeInDown delay-07s">Flashbang Entertainment</h1>
+        <h1 class="">Flashbang Entertainment</h1>
         <ul class="we-create animated fadeInUp delay-1s">
         	<li>We provide top quality live entertainment while offering you a range of options to fit your specific requests and budget. </li>
         </ul>
