--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -67,7 +67,7 @@
 
 <header class="header" id="header test"><!--header-start-->
 	<div class="container" id="PageTop">
-    	<figure class="logo slideUp"><div style="height:100%; width:100%"><img src="img/logo.png" style="width:100%" alt=""></div>	
+    	<figure class="logo bigEntrance"><div style="height:100%; width:100%"><img src="img/logo.png" style="width:100%" alt=""></div>	
         </figure>	
         <h1 class="">Flashbang Entertainment</h1>
         <ul class="we-create animated fadeInUp delay-1s">
