--- a/FlashBang/FlashBang/timnrob.html
+++ b/FlashBang/FlashBang/timnrob.html
@@ -88,7 +88,7 @@
 				<h6></h6>
 				<div class="row">
 					<div class="col-md-5  text-right wow">
-						<br><img itemprop="image" src="img/Portfolio-pic5.jpg" alt="">
+						<br><img itemprop="image" src="img\TimRob\DSC03825.jpg" alt="">
 					</div><br>
 					<div class="col-md-7 wow">
 						<h2 class="title" itemprop="name">Tim N' Rob</h2><br>
@@ -298,9 +298,10 @@
 							<!-- Slideshow 1 -->
 							<div class="rslides_container">
 							  <ul class="rslides" id="slider1">
-								<li><img src="img/tim1.jpg" alt=""></li>
-								<li><img src="img/tim2.jpg" alt=""></li>
-								<li><img src="img/tim3.jpg" alt=""></li>
+								<li><img src="img\TimRob\DSC03825.jpg" alt=""></li>
+								<li><img src="img\TimRob\DSC03789.jpg" alt=""></li>
+								<li><img src="img\TimRob\DSC04019.jpg" alt=""></li>
+								<li><img src="img\TimRob\DSC03939.jpg" alt=""></li>								
 							  </ul>
 							</div>
 						</div>
