--- a/FlashBang/FlashBang/timnrob.html
+++ b/FlashBang/FlashBang/timnrob.html
@@ -298,10 +298,10 @@
 							<!-- Slideshow 1 -->
 							<div class="rslides_container">
 							  <ul class="rslides" id="slider1">
-								<li><img src="img\TimRob2.jpg" alt=""></li>
-								<li><img src="img\TimRob1.jpg" alt=""></li>
-								<li><img src="img\TimRob3.jpg" alt=""></li>
-								<li><img src="img\TimRob4.jpg" alt=""></li>								
+								<li><img src="./img/TimRob2.jpg" alt=""></li>
+								<li><img src="./img/TimRob1.jpg" alt=""></li>
+								<li><img src="./img/TimRob3.jpg" alt=""></li>
+								<li><img src="./img/TimRob4.jpg" alt=""></li>								
 							  </ul>
 							</div>
 						</div>
