--- a/FlashBang/FlashBang/timnrob.html
+++ b/FlashBang/FlashBang/timnrob.html
@@ -299,7 +299,7 @@
 							<div class="rslides_container">
 							  <ul class="rslides" id="slider1">
 								<li><img src="./img/TimRob2.jpg" alt=""></li>
-								<li><img src="./img/TimRob1.jpg" alt=""></li>
+								<li><img src="./img/TimRob1.png" alt=""></li>
 								<li><img src="./img/TimRob3.jpg" alt=""></li>
 								<li><img src="./img/TimRob4.jpg" alt=""></li>								
 							  </ul>
