--- a/FlashBang/FlashBang/timnrob.html
+++ b/FlashBang/FlashBang/timnrob.html
@@ -88,7 +88,7 @@
 				<h6></h6>
 				<div class="row">
 					<div class="col-md-5  text-right wow">
-						<br><img itemprop="image" src="img\TimRob2.jpg" alt="">
+						<br><img itemprop="image" src="img\TimRob2.png" alt="">
 					</div><br>
 					<div class="col-md-7 wow">
 						<h2 class="title" itemprop="name">Tim N' Rob</h2><br>
@@ -298,10 +298,10 @@
 							<!-- Slideshow 1 -->
 							<div class="rslides_container">
 							  <ul class="rslides" id="slider1">
-								<li><img src="./img/TimRob2.jpg" alt=""></li>
+								<li><img src="./img/TimRob2.png" alt=""></li>
 								<li><img src="./img/TimRob1.png" alt=""></li>
-								<li><img src="./img/TimRob3.jpg" alt=""></li>
-								<li><img src="./img/TimRob4.jpg" alt=""></li>								
+								<li><img src="./img/TimRob3.png" alt=""></li>
+								<li><img src="./img/TimRob4.png" alt=""></li>								
 							  </ul>
 							</div>
 						</div>
